--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <table>
     <tr>
-        <th colspan="3"> <h1>The Avengers(2012)</h1> </th></tr>
+        <td>
+
+        </td>
+        <h1><th colspan="3">The Avengers(2012)</th> </h1></tr>
     <tr>
         <td colspan="3"><h3>SYPNOSIS</h3> </td>
     </tr>
@@ -19,7 +22,7 @@
     </tr>
     <tr>
         <td colspan="2" rowspan="8"> <div class="Affiche"><a href="https://www.imdb.com/title/tt0848228/?ref_=fn_al_tt_1" target="_blank"><img src="images/Avengers.png" alt="Affiche" class="Affiche"></a></div></td>
-        <td> <div class="Distribution" class="Distribution">Distribution</div></td>
+        <td> <div class="Distribution" class="Bordure">Distribution</div></td>
     </tr>
     <tr>
         <td><div class="Robert"><a href="https://fr.wikipedia.org/wiki/Robert_Downey_Jr." target="_blank"><img src="images/Robert_Downey_Jr..png" alt="Acteur1" class="image-acteur"></a></div></td>
