--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <td>
 
         </td>
-        <h1><th colspan="3">The Avengers(2012)</th> </h1></tr>
+        <th colspan="3"><h1>The Avengers(2012)</h1> </th></tr>
     <tr>
         <td colspan="3"><h3>SYPNOSIS</h3> </td>
     </tr>
