--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <td>
 
         </td>
-        <th colspan="3"><h1>The Avengers(2012)</h1> </th></tr>
+        <th colspan="3">
+            <h1>The Avengers(2012)</h1>
+         </th></tr>
     <tr>
         <td colspan="3"><h3>SYPNOSIS</h3> </td>
     </tr>
@@ -22,7 +24,7 @@
     </tr>
     <tr>
         <td colspan="2" rowspan="8"> <div class="Affiche"><a href="https://www.imdb.com/title/tt0848228/?ref_=fn_al_tt_1" target="_blank"><img src="images/Avengers.png" alt="Affiche" class="Affiche"></a></div></td>
-        <td> <div class="Distribution" class="Bordure">Distribution</div></td>
+        <td> <div class="bordure">Distribution</div></td>
     </tr>
     <tr>
         <td><div class="Robert"><a href="https://fr.wikipedia.org/wiki/Robert_Downey_Jr." target="_blank"><img src="images/Robert_Downey_Jr..png" alt="Acteur1" class="image-acteur"></a></div></td>
