--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 <body>
     <table>
     <tr>
-        <td>
-
-        </td>
-        <th colspan="3">
-            <h1>The Avengers(2012)</h1>
+        <th colspan="3"><div class="titre1">The Avengers(2012)</div>
          </th></tr>
     <tr>
         <td colspan="3"><h3>SYPNOSIS</h3> </td>
