--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <table>
     <tr>
-        <th colspan="3"><div class="titre1">The Avengers(2012)</div>
-         </th></tr>
+        <th> <div class="titre1">The Avengers(2012)</div></th>
+        </tr>
     <tr>
         <td colspan="3"><h3>SYPNOSIS</h3> </td>
     </tr>
