--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 <body>
     <table>
     <tr>
-        <th> <div class="titre1">The Avengers(2012)</div></th>
-        </tr>
+        <th colspan="3"><div class="titre1">The Avengers(2012)</div>
+            <td></td>
+            <td></td>
+         </th></tr>
     <tr>
-        <td><h3>SYPNOSIS</h3> </td>
+        <td colspan="3"><h3>SYPNOSIS</h3> </td>
+        <td></td>
+        <td></td>
     </tr>
     <tr>
         <td colspan="3">Quand un ennemi inattendu fait surface pour menacer la sécurité et l'équilibre mondial, Nick Fury, directeur de l'agence internationale pour le maintien de la paix, connue sous le nom du S.H.I.E.L.D., doit former une équipe pour éviter une catastrophe mondiale imminente. Un effort de recrutement à l'échelle mondiale est mis en place, pour finalement réunir l'équipe de super héros de rêve, dont Iron Man, l'incroyable Hulk, Thor, Captain America, Hawkeye et Black Widow.</td>
+        <td></td>
+        <td></td>
     </tr>
     <tr>
         <td colspan="2" rowspan="8"> <div class="Affiche"><a href="https://www.imdb.com/title/tt0848228/?ref_=fn_al_tt_1" target="_blank"><img src="images/Avengers.png" alt="Affiche" class="Affiche"></a></div></td>
